asm_tests/other_testfiles/invalid_files/error39.s
.name "MORO"
.comment "MORJESTA!"

zjmp r1
